bricks/form/src/select/index.shadow.css
.select {
  width: 100%;
  margin: 0;
  padding: 0;
  color: var(--antd-text-color);
  font-size: 14px;
  position: relative;
  cursor: text;
  min-width: 100px;
}

* {
  box-sizing: border-box;
}

/* select-input */
.select-selector {
  position: relative;
  border: 1px solid var(--antd-border-color-base);
  border-radius: var(--small-border-radius);
  box-sizing: border-box;
  background-color: var(--antd-component-background);
  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
  padding-right: 24px;
}

.select:not(.select-disabled):hover {
  .select-selector {
    border-color: var(--antd-input-hover-border-color);
    z-index: 1;
  }

  .close-btn {
    display: block;
  }
}

.select-multiple .select-selector {
  min-height: 30px;
  height: auto;
}

.select-selection-overflow {
  position: relative;
  display: flex;
  flex: auto;
  flex-wrap: wrap;
  max-width: 100%;
  padding-left: 10px;
}

.select-multiple .select-selection-overflow {
  padding-left: 4px;
}

.select-single .select-selection-overflow {
  width: 100%;
  padding: 0 10px;
}

.selected-item {
  flex: none;
  align-self: center;
  max-width: 100%;
  line-height: 1;
  margin-top: 2px;
}

.selected-item .label {
  display: inline-block;
  margin-right: 4px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.selector-focused {
  border-color: var(--antd-input-focus-border-color);
  border-width: 1px;
  outline: 0;
  box-shadow: 0 0 0 2px rgb(0 113 235 / 20%);
}

.select-single-item {
  line-height: 1;
}

.selector-focused .selected-single-item {
  color: var(--antd-input-placeholder-color);
}

.select-single .select-selection-search {
  position: absolute;
  top: -2px;
  right: 25px;
  bottom: 0;
  left: 10px;
}

.select-multiple .select-selection-search {
  left: 4px;
}

.select-single-item {
  flex: 1;
  min-width: 0;
  .label {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: flex;
    align-items: center;
    justify-content: space-between;

    .text {
      margin-right: 4px;
      flex: 1;

      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.select-multiple .select-selection-search {
  padding-right: 22px;
}

.select-selection-search-input {
  margin: 0;
  padding: 0;
  background: transparent;
  border: none;
  outline: none;
  appearance: none;
  width: 100%;
  height: 30px;
  cursor: pointer;
  color: var(--antd-text-color);
}

.select-disabled .select-selector {
  color: var(--text-color-disabled);
  background: var(--antd-input-disabled-bg);
  cursor: not-allowed;
}
.select-disabled .select-selection-search-input {
  cursor: not-allowed;
}

.select-selector.is-error {
  border-color: var(--antd-error-color);
}

.close-btn {
  display: none;
}

/* arrow */
.anticon {
  display: inline-block;
  color: inherit;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.select-arrow {
  display: inline-block;
  color: inherit;
  cursor: pointer;
  font-style: normal;
  line-height: 0;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  position: absolute;
  top: 53%;
  right: 11px;
  width: 12px;
  height: 12px;
  margin-top: -6px;
  color: var(--text-color-disabled);
  font-size: 12px;
  line-height: 1;
  text-align: center;
}

.anticon {
  vertical-align: top;
  transition: 0.4s rotate ease;
}

.anticon.focus {
  rotate: -180deg;
}

/* dropdown */
.select-dropdown {
  line-height: 1.5715;
  padding: 2px;
  overflow: hidden;
  background-color: var(--color-fill-bg-container-4);
  border-radius: var(--medius-border-radius);
  box-shadow: var(--feedback-container-shadow);
}

.dropdown-list {
  max-height: 256px;
  overflow-y: scroll;
  overflow-anchor: none;
}

.dropdown-inner {
  display: flex;
  flex-direction: column;
}

.select-item {
  position: relative;
  display: block;
  padding: 5px 12px;
  color: var(--antd-text-color);
  font-weight: normal;
  font-size: 14px;
  line-height: 22px;
  cursor: pointer;
  transition: background 0.3s ease;
  margin: 2px;
}

.select-item-option {
  display: flex;
  border-radius: var(--medius-border-radius);
  margin: 2px;
}

.select-item-option.disabled {
  cursor: not-allowed;
  color: var(--color-disabled-text);
  background: var(--antd-input-disabled-bg);
}

/* .select-item-option:hover {
  background-color: var(--antd-select-item-active-bg);
} */

.select-option-hover {
  background-color: var(--antd-select-item-active-bg);
}

.select-item-option-content {
  position: relative;
  flex: auto;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.select-item-option-content .option {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.select-option-selected .option:not(:last-child) {
  margin-right: 22px;
}

.dropdown-list .option .label {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.dropdown-list .option .label:not(:last-child) {
  margin-right: 8px;
}

.select-option-selected {
  background-color: var(--color-info-icon-bg);
}

.select-option-hover {
  background-color: var(--antd-select-item-active-bg);
}

.is-checked {
  display: none;
  position: absolute;
  right: 0px;
  top: 0;
  color: var(--color-brand);
}

.select-option-selected .is-checked {
  display: block;
}

.input-item {
  min-height: 28px;
  display: flex;
  align-items: center;
  min-width: 0;
}

.select-single .input-item {
  flex: 1;
}

.empty-tips {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 14px;
  color: var(--palette-gray-8);
  padding: 20px;
}

.empty-tips > span {
  margin-left: -4px;
  margin-top: 8px;
  color: var(--color-secondary-text);
}

.select-group-wrapper {
  .select-group-label {
    padding-left: 12px;
    color: var(--antd-text-color-secondary);
    font-size: 12px;
    cursor: default;
  }
  .select-item-option {
    padding-left: 24px;
  }
}

.dropdown-list-loading-container {
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(var(--antd-component-background), 0.7);
  font-size: 24px;
}

